--- a/src/Components/SmallSearch/SmallSearch.css
+++ b/src/Components/SmallSearch/SmallSearch.css
@@ -10,13 +10,9 @@
 {
     @apply p-4 rounded-full 
 }
-.SmallSearch div:nth-child(5)
-{
-    @apply pr-14 
-}
 
-#searchBtnn{
-    @apply absolute right-1 hover:bg-[#d22c4b] bg-[#ff385c] rounded-full w-[29px] h-[29px] flex justify-center items-center cursor-pointer z-10
+.searchBtnn{
+    @apply absolute  hover:bg-[#d22c4b] bg-[#ff385c] rounded-full w-[29px] h-[29px] flex justify-center items-center cursor-pointer z-10
 }
 .y{
     @apply text-[11px]
