--- a/src/Components/CardContainer/CardContainer.css
+++ b/src/Components/CardContainer/CardContainer.css
@@ -1,6 +1,16 @@
 .CardContainer{
-    @apply z-0  flex gap-[20px] flex-wrap justify-center  w-full p-6 relative top-32 md:top-20;
+    @apply  z-0 h-max  flex gap-[20px] flex-wrap justify-center  w-full p-6 relative ;
 }
 .fltrBtn{
     @apply text-sm border-[1px] p-3 px-4 rounded-xl flex items-center gap-3 hover:border-black hover:bg-gray-100
+}
+
+.CardContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
+    gap: 0px;
+    padding-left: 5.5%;
+    width: 100%;
+    box-sizing: border-box;
+    max-height: 80vh;
 }
