--- a/src/Components/CardContainer/CardContainer.css
+++ b/src/Components/CardContainer/CardContainer.css
@@ -1,5 +1,5 @@
 .CardContainer{
-    @apply  z-0 h-max  flex gap-[20px] flex-wrap justify-center  w-full pr-20 relative ;
+    @apply  z-0 h-max  flex gap-[20px] flex-wrap justify-center  w-full pr-9 md:pr-20  relative ;
 }
 .fltrBtn{
     @apply text-sm border-[1px] p-3 px-4 rounded-xl flex items-center gap-3 hover:border-black hover:bg-gray-100
