--- a/src/Pages/Wishlist/Wishlist.css
+++ b/src/Pages/Wishlist/Wishlist.css
@@ -1,3 +1,3 @@
 .wishContainer{
-    @apply font-[Poppins]  flex flex-col gap-[20px] flex-wrap justify-center h-full  w-full p-2 relative top-32 md:top-32 ;
+    @apply py-10 font-[Poppins]  flex flex-col gap-[20px] flex-wrap justify-center h-full  w-full p-2 relative top-32 md:top-32 ;
 }
